--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 110
+  "printWidth": 110,
+  "tabWidth": 4,
+  "endOfLine": "auto"
 }
