--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
     "compilerOptions": {
+        "baseUrl": "./",
+        "paths": {
+            "@prisma-module/*": ["src/common/prisma/*"],
+            "@prisma-client/*": ["src/generated/prisma/*"],
+            "@pictures/*": ["src/pictures/*"],
+            "@nestgram/*": ["src/*"],
+        },
         "module": "nodenext",
         "moduleResolution": "nodenext",
         "resolvePackageJsonExports": true,
@@ -13,7 +20,6 @@
         "target": "ES2023",
         "sourceMap": true,
         "outDir": "./dist",
-        "baseUrl": "./",
         "incremental": true,
         "skipLibCheck": true,
         "strictNullChecks": true,
